# Glass-Defect-Detection-Prototype

./: .dockerignore  .gitattributes  .gitignore  .railwayignore  .railwayrc.json  404.html  BACKEND_CONNECTION.md  BEFORE_AFTER_CSS.md  CAMERA_STREAMING_FIX.md  COMPLETE_SETUP_GUIDE.md  CONFIGURATION_VERIFICATION.md  CSS_CHANGES_DETAILED.md  DATABASE_SETUP.sql  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFIED.md  DEVICE_ID_UPDATE.md  DIAGNOSTICS_REPORT.md  Dashboard.html  Dockerfile  FIXES_SUMMARY.md  FIX_CAMERA_STREAMING.md  FRONTEND_CHECKLIST.md  FRONTEND_TEST_REPORT.md  FUNCTIONALITY_CHECK.md  FUNCTIONALITY_CHECKLIST.md  GITHUB_PAGES_DEPLOYMENT.md  LAYOUT_FIX_SUMMARY.md  LAYOUT_FIX_VISUAL.md  LIVE_STREAM_QUICK_FIX.md  Login.css  Login.html  MAIN2_CONNECTION_VERIFICATION.md  MAIN2_QUICKSTART.md  MAIN2_TEST_REPORT.md  MAIN_PY_FIXES.md  MANUAL_WEBRTC_CONNECTION.md  MainDetection.py  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  (+64 more)
App/: README.md  app.py
Backend/: .env.example  .env.production  auth.js  defect-tagger.js  defects.js  device-handler.js  package-lock.json  package.json  realtime.js  server.js  setup-test-users.js  start-all.js  websocket-server.js  websocket-server.js.deprecated
Defect/: mainwindow.cpp
Frontend/: .env.example  README.md  SUPABASE_INTEGRATION_CHECKLIST.md  (+3 more)
QtApp/: BUTTON_FUNCTIONALITY_REPORT.md  CMakeLists.txt  defectlistwidget.cpp  defectlistwidget.h  detect_db2.py  detectionwidget.cpp  detectionwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt  websockethandler.cpp  websockethandler.h
(+365 files in other folders)
